# handwriting-number-recognition

./: .gitignore  CMakeLists.txt  README.md  param.h
cli/: main.cpp
src/: mnist.cpp  mnist.h  recog.h  trainer.cpp  trainer.h
